added demo controls

--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -7,6 +7,13 @@
     <title>addBackground demo</title>
   </head>
   <body>
-    <canvas id="canvas" width="800" height="800"></canvas>
+    <div class="flex">
+      <canvas id="canvas" width="800" height="800"></canvas>
+      <div class="controls">
+        <h1>addBackground demo</h1>
+        <h2>Type:</h2>
+        <div id="controls_type"></div>
+      </div>
+    </div>
   </body>
 </html>
